# confluent-hybrid-cloud-workshop

./: .gitignore  README.md  sonar-project.properties  workshop-azure-example.yaml  workshop-create.py  workshop-destroy.py  workshop-example-aws.yaml  workshop-example-azure.yaml  workshop-example-gcp.yaml  workshop.example.yaml
workshops/hybrid-cloud-workshop-one-cluster-linking/: .gitignore  README.md  pyproject.toml  workshop-create.py  workshop-destroy.py  workshop-example-aws.yaml  workshop-example-azure.yaml  workshop-example-gcp.yaml
workshops/hybrid-cloud-workshop-one-cluster-linking/core/asciidoc/: .gitignore  hybrid-cloud-workshop.adoc  index-cl-edges-hq.adoc  index-cl.adoc
workshops/hybrid-cloud-workshop-one-cluster-linking/core/asciidoc/bits/: intro-cl-edges-hq.adoc  intro-cl.adoc  main-cl-edges-hq.adoc  main-cl.adoc  main.adoc  replicator-tocloud.adoc  replicator-toonprem.adoc  uc-financial-01.adoc  uc-financial-04.adoc  uc-retail-logistics-03.adoc
workshops/hybrid-cloud-workshop-one-cluster-linking/core/dev/: README.md  cluster-link-1.sh  cluster-link-2.sh  create-ksqldb-app.sh
workshops/hybrid-cloud-workshop-one-cluster-linking/core/docker/: docker-compose.yaml
workshops/hybrid-cloud-workshop-one-cluster-linking/core/docker/db_transaction_simulator/: simulate_dbtrans.py
workshops/hybrid-cloud-workshop-one-cluster-linking/core/docker/edges/: docker-compose.yaml
workshops/hybrid-cloud-workshop-one-cluster-linking/core/docker/hq/: docker-compose.yaml
workshops/hybrid-cloud-workshop-one-cluster-linking/core/terraform/aws/: main.tf  outputs.tf  (+1 more)
(+213 files in other folders)
